# Rocketry

./: .gitignore  README.md
data/: parachute_catalogue.json
docs/: json-schema.md  mvp-spec.md
recovery-systems/drift/: README.md  pyproject.toml
recovery-systems/drift/data/: parachute_catalogue.json
recovery-systems/drift/docs/: design-spec.md  json-schema.md  mvp-spec.md
recovery-systems/drift/docs/examples/dual-deployment-demo/: dual-deployment-demo.json
recovery-systems/drift/src/drift/: __init__.py  __main__.py
recovery-systems/drift/src/drift/core/: atmosphere.py  performance.py  sizing.py  warnings.py
recovery-systems/drift/src/drift/models/: configuration.py  phases.py  project.py
recovery-systems/drift/src/drift/services/: analysis.py  comparison.py  export.py  validation.py  visualization.py
recovery-systems/drift/src/drift/ui/: __init__.py  main_window.py  theme.py  top_bar.py
recovery-systems/drift/src/drift/ui/panels/: input_panel.py  results_panel.py
recovery-systems/drift/src/drift/ui/visuals/: __init__.py  schematic_widget.py  visuals_panel.py
recovery-systems/drift/tests/acceptance/: __init__.py  test_acceptance_suite.py
recovery-systems/drift/tests/unit/: __init__.py  test_analysis.py  test_comparison.py  test_export.py  test_persistence.py  test_ui_smoke.py  test_validation.py  test_visualization.py  test_warnings.py
recovery-systems/parachute-area/: README.md
src/drift/: formatting.py
src/drift/core/: __init__.py  atmosphere.py  (+5 more)
tests/: __init__.py
tests/acceptance/: fixtures.py
tests/unit/: test_analysis.py
(+17 files in other folders)
