[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
version = "0.1.0"
description = "DRIFT - Deployment and Recovery Integrated Flight Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
