[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "drift"
dynamic = ["version"]
description = "DRIFT - Deployment and Recovery Integrated Flight Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "../.."
fallback_version = "0+unknown"
local_scheme = "no-local-version"
